--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,45 @@ html{
     text-transform: uppercase;
     text-shadow: 4px 2px 6px #404040;}
 
+.mid-size-font{
+    font-family: 'proza_libresemibold', sans-serif;
+    font-size: 2.5em;}
+
+/* ================================================  START OF GLOBAL STYLES ======================================= */
+/**
+ * GLOBAL STYLING HERE
+ */
+.internalLink{
+    font-size: 26px;
+    font-weight: bold;
+    color: blue !important;
+    padding: 4px;}
+.internalLink:hover{
+    color: #FFFFFF !important;
+    background-color: #337ab7;}
+
+/**
+ * To be used for ALL outgoing/external links
+ */
+.outgoingLink{
+     color: #337ab7 !important;
+     font-size: 13px !important;}
+.outgoingLink:hover{
+    background-color: #337ab7;
+    color: #FFFFFF !important;
+    padding: 2px 2px 2px 2px;}
+
+/* DO NOT remove or modify this style as it separates the photos from the bottom of the page
+** allowing either content to be below the pictures if needed or grant extra space/padding below galleries
+*/
+#gallery-clear-bottom{
+    display: block !important;
+    clear: both;}
+
+
+
+/* ================================================  END OF GLOBAL STYLES ======================================= */
+
 /* 
 /* This overrides text-transform that is created by jQuery Mobile */
 .ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper{
@@ -27,7 +66,6 @@ html{
 .container{
     min-width: 100%;
     min-height: 100%;
-    /* background-color: #083450; very light grey is : #cccccc; */
     background-color: #FFFFFF; /* very light grey for main background */}
 
 header.row{
@@ -314,33 +352,23 @@ nav.navbar.navbar-default{
 /* END OF STYLES FOR UPLOAD.BLADE.PHP */
 
 
-/* DO NOT remove or modify this style as it separates the photos from the bottom of the page
-** allowing either content to be below the pictures if needed or grant extra space/padding below galleries
-*/
-#gallery-clear-bottom{
-    display: block !important;
-    clear: both;}
-/**
- * To be used for ALL outgoing/external links
- */
-.outgoingLink{
+
+
+
+
+/* COULD BE USED FOR STYLING OUTGOING LINKS --- IF CODE IS ADDED TO AVOID CHANGING ANY LINKS IN FOOTER 
+a[href^="https://"]{
      color: #337ab7 !important;
-     font-size: 13px !important;}
-.outgoingLink:hover{
-    background-color: #337ab7;
-    color: #FFFFFF !important;
-    padding: 2px 2px 2px 2px;}
+     font-size: 15px !important
+}
+
+a[href^="http://"]{
+    color: #337AB7 !important;;
+    font-size: 12px;
+} */
 /**
  * To be used for ALL internal links
  */
-.internalLink{
-    font-size: 26px;
-    font-weight: bold;
-    color: blue !important;
-    padding: 4px;}
-.internalLink:hover{
-    color: #FFFFFF !important;
-    background-color: #337ab7;}
 
 /**
  * Slideshow CSS
@@ -475,14 +503,13 @@ nav.navbar.navbar-default{
     text-align: left; 
     border: none;}
 /* General Coding Information page: Header for each programming language */
-.static-content.general-coding h3{
-    font-family: 'proza_libresemibold', sans-serif;
+.section-header{
     color: #252525; 
     background-color: transparent; 
     border: none;
-    text-align: left; 
-    font-size: 4.5rem; 
-    margin-left: -1%;}
+    display: block;
+    text-align: left; }
+
 /* General Coding Information page: paragraph text */
 .static-content.general-coding p{
     font-family: 'proza_libreregular', sans-serif;
